--- a/MultipleKinectMaster/MainWindow.xaml
+++ b/MultipleKinectMaster/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="MultipleKinectMaster.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MT Master" Height="600" Width="700">
+        Title="MT Master" Height="650" Width="1150">
     <Window.Resources>
         <SolidColorBrush x:Key="MediumGreyBrush" Color="#ff6e6e6e"/>
         <SolidColorBrush x:Key="KinectPurpleBrush" Color="#ff52318f" />
@@ -17,21 +17,64 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <Image Grid.Row="0" Source="Images\Logo.png" HorizontalAlignment="Left" Stretch="Fill" Height="32" Width="81" Margin="0 10 0 5"/>
         <TextBlock Grid.Row="0" Margin="0 0 -1 0" HorizontalAlignment="Right" VerticalAlignment="Bottom" Foreground="{StaticResource MediumGreyBrush}" FontFamily="Segoe UI" FontSize="18"> Motion Tracker for Master</TextBlock>
         <Image Grid.Row="0" Source="Images\Status.png" Stretch="None" HorizontalAlignment="Center" Margin="0 0 0 5"/>
-        <Viewbox x:Name="kinectBodyViewbox"  Grid.Row="1"  HorizontalAlignment="Center" >
-            <Image Source="{Binding ImageSource}" Stretch="UniformToFill"/>
-        </Viewbox>
-        <StackPanel Grid.Row="2" Orientation="Horizontal" Background="White">
+        <Grid Grid.Row="1" >
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Viewbox x:Name="kinectBodyViewboxMaster"  Grid.Row="0" Grid.Column="0" HorizontalAlignment="Right" Margin="0,5,3.8,4.8"    MinWidth="500" MinHeight="300" >
+                <Image Source="{Binding ImageSourceMaster}" Stretch="UniformToFill"/>
+            </Viewbox>
+            <Viewbox x:Name="kinectBodyViewboxClient"   Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center"  Margin="7.2,5,2.4,4.8" MinWidth="500"   MinHeight="300"  >
+                <Image Source="{Binding ImageSourceClient}" Stretch="UniformToFill"/>
+            </Viewbox>
+            <WrapPanel  Grid.Row="1" Grid.Column="0">
+                <Label Content="裝置編號 : "  />
+                <TextBlock Text="Dev1" VerticalAlignment="Center"  />
+
+                <Label Content="頭 :" />
+                <TextBlock x:Name="Head1" Text="{Binding Head1 }"   VerticalAlignment="Center"/>
+                <Label Content="身 :"/>
+                <TextBlock  x:Name="Torso1" Text="{Binding Torso1  }" VerticalAlignment="Center"/>
+                <Label Content="左肩 :"/>
+                <TextBlock  x:Name="LShouder1" Text="{Binding LShouder1 }" VerticalAlignment="Center"/>
+                <Label Content="右肩 :"/>
+                <TextBlock  x:Name="RShouder1" Text="{Binding RShouder1}" VerticalAlignment="Center"/>
+            </WrapPanel>
+
+            <WrapPanel  Grid.Row="1" Grid.Column="1">
+                <Label Content="裝置編號 : "  />
+                <TextBlock Text="Dev2" VerticalAlignment="Center"  />
+
+                <Label Content="頭 :" />
+                <TextBlock x:Name="Head2" Text="{Binding Head2 }"   VerticalAlignment="Center"/>
+                <Label Content="身 :"/>
+                <TextBlock  x:Name="Torso2" Text="{Binding Torso2 }" VerticalAlignment="Center"/>
+                <Label Content="左肩 :"/>
+                <TextBlock  x:Name="LShouder2" Text="{Binding LShouder2 }" VerticalAlignment="Center"/>
+                <Label Content="右肩 :"/>
+                <TextBlock  x:Name="RShouder2" Text="{Binding RShouder2}" VerticalAlignment="Center"/>
+            </WrapPanel>
+            
+        </Grid>
+        <Separator Grid.Row="2" />
+        <StackPanel Grid.Row="3" Orientation="Horizontal" Background="White" >
             <Button x:Name="PlayButton" Content="Play" Width="90" Click="PlayButton_Click" Margin="10,10,10,0" Padding="5" Height="32" VerticalAlignment="Top" />
             <Button x:Name="StopButton" Content="Stop" Width="90" Height="32" Margin="10,10,10,0" Padding="5" VerticalAlignment="Top" Click="StopButton_Click" />
             <Button x:Name="ResetButton" Content="Reset" Width="90" Height="32" Margin="10,10,10,0" Padding="5" VerticalAlignment="Top" Click="RestartButton_Click" />
             <Button x:Name="GetMegButton" Content="GetMeg" Width="90" Height="32" Margin="10,10,10,0" Padding="5" VerticalAlignment="Top" Click="GetMegButton_Click" />
         </StackPanel>
-        <StatusBar Grid.Row="3" HorizontalAlignment="Stretch" Name="statusBar" VerticalAlignment="Bottom" Background="White" Foreground="{StaticResource MediumGreyBrush}">
+        <StatusBar Grid.Row="4" HorizontalAlignment="Stretch" Name="statusBar" VerticalAlignment="Bottom" Background="White" Foreground="{StaticResource MediumGreyBrush}" Margin="10,0,-10.4,10">
             <StatusBarItem Content="{Binding KinectStatusText}" />
         </StatusBar>
     </Grid>
