--- a/MultipleKinectClient/MainWindow.xaml
+++ b/MultipleKinectClient/MainWindow.xaml
@@ -38,12 +38,9 @@
         <Separator Grid.Row="2" VerticalAlignment="Bottom" />
 
         <StackPanel Grid.Row="3" Orientation="Horizontal" Background="White">
+            
             <Button x:Name="PlayButton" Content="Play" Width="90" Click="PlayButton_Click" Margin="10,10,10,0" Padding="5" Height="32" VerticalAlignment="Top" />
-            <Button x:Name="StopButton" Content="Stop" Width="90" Height="32" Margin="10,10,10,0" Padding="5" VerticalAlignment="Top" Click="StopButton_Click" />
-            <Button x:Name="ResetButton" Content="Reset" Width="90" Height="32" Margin="10,10,10,0" Padding="5" VerticalAlignment="Top" Click="RestartButton_Click" />
-            <Button x:Name="SendMsgButton" Content="SendMsg" Width="90" Height="32" Margin="10,10,10,0" Padding="5" VerticalAlignment="Top" Click="SendMeg_Click" />
-            <Button x:Name="CatchImgButton" Content="CatchImg" Width="45" Height="32" Margin="10,10,10,0" Padding="5" VerticalAlignment="Top" Click="CatchImg_Click" />
-            <Button x:Name="RenderMsgButton" Content="Render" Width="45" Height="32" Margin="10,10,10,0" Padding="5" VerticalAlignment="Top" Click="Render_Click" />
+            <Button x:Name="Record" Content="Record" Width="60" Height="32" Margin="10,10,10,-0.4" Padding="5" VerticalAlignment="Top" Click="Record_Click" />
 
         </StackPanel>
         <StatusBar Grid.Row="4" HorizontalAlignment="Stretch" Name="statusBar" VerticalAlignment="Bottom" Background="White" Foreground="{StaticResource MediumGreyBrush}">
