--- a/MultipleKinectMaster/MainWindow.xaml
+++ b/MultipleKinectMaster/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="MultipleKinectMaster.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MT Master" Height="650" Width="1150">
+        Title="MT Master" Height="760" Width="1250">
     <Window.Resources>
         <SolidColorBrush x:Key="MediumGreyBrush" Color="#ff6e6e6e"/>
         <SolidColorBrush x:Key="KinectPurpleBrush" Color="#ff52318f" />
@@ -32,10 +32,10 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <Viewbox x:Name="kinectBodyViewboxMaster"  Grid.Row="0" Grid.Column="0" HorizontalAlignment="Right" Margin="0,5,3.8,4.8"    MinWidth="550" MinHeight="300" >
+            <Viewbox x:Name="kinectBodyViewboxMaster"  Grid.Row="0" Grid.Column="0" HorizontalAlignment="Right" Margin="0,5,3.8,4.8"     MaxHeight="500">
                 <Image Source="{Binding ImageSourceMaster}" Stretch="UniformToFill"/>
             </Viewbox>
-            <Viewbox x:Name="kinectBodyViewboxClient"   Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center"  Margin="7.2,5,2.4,4.8" MinWidth="550"   MinHeight="300"  >
+            <Viewbox x:Name="kinectBodyViewboxClient"   Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center"  Margin="7.2,5,2.4,4.8" MaxHeight="500"  >
                 <Image Source="{Binding ImageSourceClient}" Stretch="UniformToFill"/>
             </Viewbox>
 
@@ -51,25 +51,19 @@
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
 
-                <WrapPanel  Grid.Row="0" Grid.Column="0">
-                    <Label Grid.Row="1" Grid.Column="0"  Content="裝置編號 : "  />
+                <WrapPanel  Grid.Row="0" Grid.Column="0" VerticalAlignment="Top">
+                    <Label  Content="裝置編號 : "  />
                     <TextBlock Grid.Row="1" Grid.Column="0" Text="Dev1" VerticalAlignment="Center"  />
 
                     <Label Content="幀數 :" />
                     <TextBlock x:Name="FrameNumbers1" Text="{Binding FrameNumbers1 }"   VerticalAlignment="Center"/>
                 </WrapPanel>
 
-                <WrapPanel Grid.Row="1" Grid.Column="0">
+                <WrapPanel Grid.Row="1" Grid.Column="0" VerticalAlignment="Top">
 
+                    <TextBlock x:Name="Txb_Motions" Text="{Binding Txb_Motions}"   VerticalAlignment="Top"/>
 
-                    <Label Content="頭 :" />
-                    <TextBlock x:Name="Head1" Text="{Binding Head1 }"   VerticalAlignment="Center"/>
-                    <Label Content="身 :"/>
-                    <TextBlock  x:Name="Torso1" Text="{Binding Torso1  }" VerticalAlignment="Center"/>
-                    <Label Content="左肩 :"/>
-                    <TextBlock  x:Name="LShouder1" Text="{Binding LShouder1 }" VerticalAlignment="Center"/>
-                    <Label Content="右肩 :"/>
-                    <TextBlock  x:Name="RShouder1" Text="{Binding RShouder1}" VerticalAlignment="Center"/>
+                    <TextBlock x:Name="Txb_SkeletonInfo" Text="{Binding Txb_SkeletonInfo}"   VerticalAlignment="Top"/>
                 </WrapPanel>
             </Grid>
 
@@ -83,7 +77,6 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
 
                 <WrapPanel Grid.Row="0" Grid.Column="0">
@@ -91,16 +84,10 @@
                     <TextBlock Text="Dev2" VerticalAlignment="Center"  />
                 </WrapPanel>
 
-                <WrapPanel Grid.Row="1" Grid.Column="0">
+                <WrapPanel Grid.Row="1" Grid.Column="0" VerticalAlignment="Top">
 
-                    <Label Content="頭 :" />
-                    <TextBlock x:Name="Head2" Text="{Binding Head2 }"   VerticalAlignment="Center"/>
-                    <Label Content="身 :"/>
-                    <TextBlock  x:Name="Torso2" Text="{Binding Torso2 }" VerticalAlignment="Center"/>
-                    <Label Content="左肩 :"/>
-                    <TextBlock  x:Name="LShouder2" Text="{Binding LShouder2 }" VerticalAlignment="Center"/>
-                    <Label Content="右肩 :"/>
-                    <TextBlock  x:Name="RShouder2" Text="{Binding RShouder2}" VerticalAlignment="Center"/>
+                    <TextBlock x:Name="Txb2SkeletonInfo" Text="{Binding Txb2SkeletonInfo}"   VerticalAlignment="Top"/>
+                    
                 </WrapPanel>
             </Grid>
 
@@ -112,6 +99,7 @@
             <Button x:Name="PlayButton" Content="Play" Width="90" Click="PlayButton_Click" Margin="10,10,10,0" Padding="5" Height="32" VerticalAlignment="Top" />
             <Button x:Name="SyhronousRecord" Content="SyhronousRecord" Width="115" Height="32" Margin="10,10,10,0" Padding="5" VerticalAlignment="Top" Click="SyhronousRecord_Click" />
             <Button x:Name="SyhronousPlay" Content="SyhronousPlay" Width="101" Height="32" Margin="10,10,10,0" Padding="5" VerticalAlignment="Top" Click="SyhronousPlay_Click" />
+            <Button x:Name="testMotion" Content="Tmotion" Width="75" Click="testMotion_Click"/>
             <TextBlock  Text="{Binding RecordPlaybackStatusText}" HorizontalAlignment="Right" VerticalAlignment="Center" Foreground="{StaticResource KinectBlueBrush}" FontFamily="Segoe UI" FontSize="18" Margin="10"  />
 
         </StackPanel>
