--- a/MultipleKinectClient3D/MainWindow.xaml
+++ b/MultipleKinectClient3D/MainWindow.xaml
@@ -1,13 +1,12 @@
-﻿<Window x:Class="MultipleKinectMaster3D.MainWindow"
+﻿<Window x:Class="MultipleKinectClient3D.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:h="http://helix-toolkit.org/wpf"
-        xmlns:local ="clr-namespace:MultipleKinectMaster3D"
-
-        Title="MotionDetectSystemMaster" Height="350" Width="525">
+        xmlns:local ="clr-namespace:MultipleKinectClient3D"
+        Title="MotionDetectSystemClient" Height="350" Width="525">
     <Window.Resources>
         <SolidColorBrush x:Key="MediumGreyBrush" Color="#ff6e6e6e"/>
- 
+
         <local:DataTemplate3D x:Key="TemplateJointsPoint">
             <h:SphereVisual3D Center="{Binding Position}" Radius="{Binding Radius}" Fill="{Binding Brushes}"/>
         </local:DataTemplate3D>
@@ -15,12 +14,12 @@
         <local:DataTemplate3D x:Key="TemplateJointPipe">
             <h:PipeVisual3D   Point1="{Binding Point1}" Point2="{Binding Point2}" Diameter="{Binding Radius}"   Fill="{Binding Brushes}"/>
         </local:DataTemplate3D>
-        
+
     </Window.Resources>
     <DockPanel>
 
-            <StackPanel DockPanel.Dock="Right">
-                <TextBlock  HorizontalAlignment="Center" Text="MotionDetectSystem" Padding="8" Foreground="Black"/>
+        <StackPanel DockPanel.Dock="Right">
+            <TextBlock  HorizontalAlignment="Center" Text="MotionDetectSystem" Padding="8" Foreground="Black"/>
 
             <Button x:Name="PlayButton" Content="PLAY" Click="PlayButton_Click" />
             <Button x:Name="SynchronousPlay" Content="SynchronousPlay" Click="SynChronousButton_Click"/>
@@ -31,7 +30,7 @@
 
 
 
-        <h:HelixViewport3D x:Name="view1" ModelUpDirection="0,1,0" ShowCoordinateSystem="True" Background="WhiteSmoke"> 
+        <h:HelixViewport3D x:Name="view1" ModelUpDirection="0,1,0" ShowCoordinateSystem="True" Background="WhiteSmoke">
             <h:HelixViewport3D.Camera>
                 <PerspectiveCamera Position="5,30,40" LookDirection="-5,-30,-40" FieldOfView="45" UpDirection="0,1,0"  />
             </h:HelixViewport3D.Camera>
@@ -46,6 +45,5 @@
 
         </h:HelixViewport3D>
     </DockPanel>
-    
-    
+
 </Window>
