20160416 完成單人動作偵測

--- a/MultipleKinectMaster3D/MainWindow.xaml
+++ b/MultipleKinectMaster3D/MainWindow.xaml
@@ -7,7 +7,7 @@
         Title="MotionDetectSystemMaster" Height="350" Width="525">
     <Window.Resources>
         <SolidColorBrush x:Key="MediumGreyBrush" Color="#ff6e6e6e"/>
- 
+
         <local:DataTemplate3D x:Key="TemplateJointsPoint">
             <h:SphereVisual3D Center="{Binding Position}" Radius="{Binding Radius}" Fill="{Binding Brushes}"/>
         </local:DataTemplate3D>
@@ -15,37 +15,40 @@
         <local:DataTemplate3D x:Key="TemplateJointPipe">
             <h:PipeVisual3D   Point1="{Binding Point1}" Point2="{Binding Point2}" Diameter="{Binding Radius}"   Fill="{Binding Brushes}"/>
         </local:DataTemplate3D>
-        
+
     </Window.Resources>
     <DockPanel>
 
-            <StackPanel DockPanel.Dock="Right">
-                <TextBlock  HorizontalAlignment="Center" Text="MotionDetectSystem" Padding="8" Foreground="Black"/>
+        <StackPanel DockPanel.Dock="Right" Margin="0,0,0,-0.2"  >
+            <TextBlock  HorizontalAlignment="Center" Text="MotionDetectSystem" Padding="8" Foreground="Black"/>
 
             <Button x:Name="PlayButton" Content="PLAY" Click="PlayButton_Click" />
             <Button x:Name="SynchronousPlay" Content="SynchronousPlay" Click="SynChronousButton_Click"/>
             <StatusBar Height="100" VerticalAlignment="Bottom" Foreground="{StaticResource MediumGreyBrush}">
-                <StatusBarItem x:Name="KinectStatus" Content="{Binding KinectStatusText}" />
+                <StatusBarItem x:Name="KinectStatus" />
             </StatusBar>
+            <Label x:Name="Lbl_MotionState" Content="{Binding Lbl_MotionState}" Background="Beige"/>
+            <Label x:Name="Lbl_TimeStamp" Content="{Binding Lbl_TimeStamp}" Background="NavajoWhite"/>
+
         </StackPanel>
 
 
 
-        <h:HelixViewport3D x:Name="view1" ModelUpDirection="0,1,0" ShowCoordinateSystem="True" Background="WhiteSmoke"> 
+        <h:HelixViewport3D x:Name="view1" ModelUpDirection="0,1,0" ShowCoordinateSystem="True" Background="WhiteSmoke">
             <h:HelixViewport3D.Camera>
-                <PerspectiveCamera Position="5,30,40" LookDirection="-5,-30,-40" FieldOfView="45" UpDirection="0,1,0"  />
+                <PerspectiveCamera Position="500,500,-300" LookDirection="-500,-500,300" FieldOfView="45" UpDirection="0,1,0"  />
             </h:HelixViewport3D.Camera>
             <h:DefaultLights/>
 
             <local:ItemsVisual3D x:Name="ItemsVisual3DJoints" ItemTemplate="{StaticResource TemplateJointsPoint}" ItemsSource="{Binding ObservableJoints}"/>
             <local:ItemsVisual3D x:Name="ItemsVisual3DPipes" ItemTemplate="{StaticResource TemplateJointPipe}" ItemsSource="{Binding ObservablePipe}"/>
 
-            <h:GridLinesVisual3D Normal="0,1,0" LengthDirection="1,0,0" Length="1000" Width="1000" Center="0,0,0" Fill="Red" MajorDistance="100" MinorDistance="10" Thickness="0.2"/>
-            <h:CubeVisual3D Center="0,300,0" SideLength="1000" Material="{h:Material Red, Opacity=0.01}"/>
+            <h:GridLinesVisual3D Normal="0,1,0" LengthDirection="1,0,0" Length="1800" Width="1800" Center="0,0,0" Fill="Red" MajorDistance="100" MinorDistance="10" Thickness="0.2"/>
+            <h:CubeVisual3D Center="0,300,0" SideLength="1800" Material="{h:Material Red, Opacity=0.01}"/>
 
 
         </h:HelixViewport3D>
     </DockPanel>
-    
-    
+
+
 </Window>
